--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body style="width: 100%; height: 100%; margin: 0">
     <iframe
-      src="http://docs.google.com/gview?url=https://github.com/manojk-mohan/portfolio_2021/raw/main/Manoj_Resume_2021.pdf&embedded=true"
+      src="https://docs.google.com/gview?url=https://github.com/manojk-mohan/portfolio_2021/raw/main/Manoj_Resume_2021.pdf&embedded=true"
       style="width: 100%; height: 100%"
       frameborder="0"
     ></iframe>
